tests/test_invalid.expected
Error: Undefined variable 'print' at line 1
  1 | print "hello"
      ^
